--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
 	},
 	"require-dev": {
 		"jakub-onderka/php-parallel-lint": "^0.9",
-		"mediawiki/mediawiki-codesniffer": "^0.7"
+		"mediawiki/mediawiki-codesniffer": "^0.7",
+		"jakub-onderka/php-console-highlighter": "0.3.2"
 	},
 	"scripts": {
 		"test": [
