Updating mediawiki/mediawiki-codesniffer to 0.9
Remove i18n backwards-compatibility shim function.

Bump major version number.

Change-Id: If7ddd92e1ef2610d59d6f43f1512bec81873e8ed

--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,10 @@
 	"description": "A MediaWiki extension for loading page text from external sources",
 	"type": "mediawiki-extension",
 	"license": "GPL-3.0",
-	"keywords": ["importing", "MediaWiki"],
+	"keywords": [
+		"importing",
+		"MediaWiki"
+	],
 	"support": {
 		"issues": "https://phabricator.wikimedia.org",
 		"irc": "irc://irc.freenode.net/mediawiki",
@@ -11,7 +14,7 @@
 	},
 	"require-dev": {
 		"jakub-onderka/php-parallel-lint": "^0.9",
-		"mediawiki/mediawiki-codesniffer": "^0.7",
+		"mediawiki/mediawiki-codesniffer": "^0.9",
 		"jakub-onderka/php-console-highlighter": "0.3.2"
 	},
 	"scripts": {
