--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
 		"source": "https://gerrit.wikimedia.org/r/p/mediawiki/extensions/ExternalArticles.git"
 	},
 	"require-dev": {
-		"jakub-onderka/php-parallel-lint": "^0.9",
+		"jakub-onderka/php-parallel-lint": "0.9.2",
 		"mediawiki/mediawiki-codesniffer": "0.11.0",
 		"jakub-onderka/php-console-highlighter": "0.3.2"
 	},
