Use SPDX 3.0 license identifier
SPDX released version 3 of their license list (<https://spdx.org/licenses/>),
which changed the FSF licenses to explicitly end in -only or -or-later
instead of relying on an easy to miss + symbol.

Bug: T183858
Change-Id: I5853baed46467a9ccce37674e6aa7bf09a5f560a

--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
 	"name": "samwilson/mediawiki-extensions-external-articles",
 	"description": "A MediaWiki extension for loading page text from external sources",
 	"type": "mediawiki-extension",
-	"license": "GPL-3.0",
+	"license": "GPL-3.0-only",
 	"keywords": [
 		"importing",
 		"MediaWiki"
